--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -68,8 +68,16 @@
   padding: 3em 5em;
 }
 
-header h2 a {
+@media (max-width: 996px){
+  .footer {
+    border-radius: 0;
+    margin: 0;
+    padding: var(--ifm-footer-padding-vertical) var(--ifm-footer-padding-horizontal);
+  }
+}
 
+header h1,
+header h2 a {
   background: linear-gradient(120deg,var(--primary),var(--accent));
   background-clip: text;
   -webkit-background-clip: text;
