--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -91,7 +91,7 @@ nav div {
 }
 
 #__docusaurus {
-  background-size: cover;
+  background-size: contain;
   background-position: top;
   background-image: var(--background-image);
 }
