--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -21,7 +21,7 @@
 
   --ifm-link-color: var(--primary);
   --ifm-footer-title-color: var(--accent);
-
+  --ifm-heading-color: var(--accent);
 
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
@@ -48,6 +48,7 @@
 
   --ifm-link-color: var(--primary);
   --ifm-footer-title-color: var(--accent);
+  --ifm-heading-color: var(--accent);
 
 
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
